--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,7 @@
             <img src="{{ url_for('static', filename='images/Ecco_logo.png') }}" alt="Ecco Logo" style="height: 75px;">
         </a>
         <p class="welcome">
-            Welcome, {{name}}!
+            Welcome back, {{name}}!
         </p>
         <div style="margin-right: 50px;">
             <a href="https://billing.stripe.com/p/login/28obM8eCBcsRbxCcMM" class="billing_link">Billing</a>
