Made cards for chatbot date have "created on" before the date

--- a/templates/home.html
+++ b/templates/home.html
@@ -61,7 +61,7 @@
                                 <li onclick="location.href='{{ url_for('admin', chatbot_id=chatbot[0]) }}';" class="chatbot">
                                     <div class="flex justify-between items-center">
                                         <span class="chatbot-name">{{ chatbot[1] }}</span>
-                                        <span class="chatbot-date">{{ chatbot[2] }}</span>
+                                        <span class="chatbot-date">Created on: {{ chatbot[2] }}</span>
                                     </div>
                                     <div class="flex justify-between items-center">
                                         <div class="status">
