--- a/templates/index.html
+++ b/templates/index.html
@@ -62,6 +62,9 @@
             </div>
         </div>
     </div>
+    <script>
+        var settings = {{ settings | tojson | safe }};
+    </script>
     <script src="{{ url_for('static', filename='js/index.js') }}"></script>
 </body>
 <style>
