--- a/static/css/index.css
+++ b/static/css/index.css
@@ -329,6 +329,7 @@
             padding: 10px;
             border-radius: 10px;
             margin-top: 5px;
+            max-width: 800px;
         }
         .msg-info {
             display: flex;
