--- a/static/css/error.css
+++ b/static/css/error.css
@@ -1,11 +1,4 @@
-body {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    padding-left: 30%;
-    padding-right: 30%;
-    padding-top: 5;
-    background-color: aliceblue;
-    margin-top: 400px;
-}
+
 .section {
     margin-bottom: 20px;
 }
@@ -29,4 +22,60 @@ p {
     margin-top: -20px;
 
     color: #494949;
+}
+
+html, body {
+    font-family: "Questrial", sans-serif;
+    margin: 0;
+    padding: 0;
+    color: #ffffff;
+    background-color: #1a1a1a; /* Dark background color */
+}
+
+.banner {
+    background-color: #2a2d34;
+    width: 100%;
+    height: 100px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 10;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px;
+}
+
+.banner div {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+
+.button_logout {
+    background-color: #5C6BC0;
+    color: #ffffff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin-bottom: 0;
+    line-height: 1;
+}
+
+.button_logout:hover {
+    background-color: #3F51B5;
+    color: #ffffff;
+}
+.error {
+    color: #ff0000;
+    font-size: 1.5em;
+    padding: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
