--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -1,80 +1,213 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>Analytics</title>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/analytics.css') }}">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-</head>
-<body>
-    <div class="top-ribbon">
-        <a href="{{ url_for('home') }}" class="button-home">HOME</a>
-        <span class="company-name">
-            <a href="https://www.eccoai.org/">
-                <img src="{{ url_for('static', filename='images/logoword2.png') }}" alt="Company Logo">
-            </a>
-        </span>
-    </div>
-    <div class="sidenav">
-        <button class="openbtn" onclick="openNav()">&#9776;</button>
-        <button class="btns" id="admin" title="Documents" onclick="openNav()"><img src="{{ url_for('static', filename='images/paper (1).png') }}" height="50" width="50" alt="Documents"></button>
-        <button class="btns" id="settings" title="Settings" onclick="openNav()"><img src="{{ url_for('static', filename='images/setting (1).png') }}" height="50" width="50" alt="settings"></button>
-        <button class="btns" id="integrations" title="Integrations" onclick="openNav()"><img src="{{ url_for('static', filename='images/integration (1).png') }}" height="50" width="50" alt="integration"></button>
-        <button class="btns" id="analytics" title="Analytics" onclick="openNav()"><img src="{{ url_for('static', filename='images/data-analytics (1).png') }}" height="50" width="50" alt="analytics"></button>
-    </div>
-    <section id="sidepanel">
-        <div id="mySidepanel" class="sidepanel">
-            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <a href="{{ url_for('admin', chatbot_id=chatbot_id) }}" id="admin" class="mgn-top">Documents</a>
-            <a href="{{ url_for('settings', chatbot_id=chatbot_id) }}" id="settings" class="mgn">Settings</a>
-            <a href="{{ url_for('integrations', chatbot_id=chatbot_id) }}" id="integrations" class="mgn">Integrations</a>
-            <a href="{{ url_for('analytics', chatbot_id=chatbot_id) }}" id="analytics" class="mgn">Analytics</a>
-        </div>              
-    </section>
-    <!-- Inside your HTML file --><!-- Inside your HTML file -->
-    <h2 class="instructions">Response Feedback</h2>
-    <div class="flex-container">
-        <div class="questions-container">
-            <div class="topics-container">
-                <h3>Common Topics</h3>
-                {% if common_topics is none %}
-                    <p>No topics available.</p>
-                {% else %}
-                <!-- Add a reset button -->
-                <button type="button" onclick="resetList()">
-                    Reset
-                </button>
-                    {% for topic_cluster in common_topics %}
-                        <button type="button" onclick="sendTopic('{{ topic_cluster }}')">
-                            {{ topic_cluster }}
-                        </button>                
-                    {% endfor %}
-                {% endif %}
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>Dashboard - SB Admin</title>
+        <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}">
+        <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+    </head>
+    <body class="sb-nav-fixed">
+        <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
+            <!-- Navbar Brand-->
+            <div>
+                <a href="https://www.eccoai.org/">
+                    <img src="{{ url_for('static', filename='images/logoword2.png') }}" alt="Company Logo" style="height: 150px; width: 150px;">
+                </a>
             </div>
-            <table>
-                <tr>
-                    <th>User Question</th>
-                    <th>Bot Response</th>
-                    <th>Feedback</th>
-                    <th>Created At</th>
-                    <!-- <th>Delete</th> -->
-                </tr>
-                {% for item in data %}
-                    <tr class="question-row {{ 'like' if item['feedback_type'] == 'Like' else ('dislike' if item['feedback_type'] == 'Dislike' else 'none') }}">
-                        <td class="user-question">{{ item['user_question'] }}</td>
-                        <td>{{ item['bot_response']|safe }}</td>
-                        <td>{{ item['feedback_type'] }}</td>
-                        <td>{{ item['created_at'] }}</td>
-                    </tr>
-                {% endfor %}
-            </table>
+            <!-- Sidebar Toggle-->
+            <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
+            <!-- Navbar Search-->
+            <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
+                <div class="input-group">
+                    <input class="form-control" type="text" placeholder="Search for..." aria-label="Search for..." aria-describedby="btnNavbarSearch" />
+                    <button class="btn btn-primary" id="btnNavbarSearch" type="button"><i class="fas fa-search"></i></button>
+                </div>
+            </form>
+            <!-- Navbar-->
+            <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
+                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="#!">Settings</a></li>
+                        <li><a class="dropdown-item" href="#!">Activity Log</a></li>
+                        <li><hr class="dropdown-divider" /></li>
+                        <li><a class="dropdown-item" href="#!">Logout</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+        <div id="layoutSidenav">
+            <div id="layoutSidenav_nav">
+                <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
+                    <div class="sb-sidenav-menu">
+                        <div class="nav">
+                            <div class="sb-sidenav-menu-heading">Core</div>
+                            <a class="nav-link" href="{{ url_for('admin', chatbot_id=chatbot_id) }}" id="Dashboard">
+                                <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                                Dashboard
+                            </a>
+                            <div class="sb-sidenav-menu-heading">Interface</div>
+                            <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
+                                <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
+                                Settings
+                                <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+                            </a>
+                            <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
+                                <nav class="sb-sidenav-menu-nested nav">
+                                    <a class="nav-link" href="{{ url_for('settings', chatbot_id=chatbot_id) }}">Styling Settings</a>
+                                    <a class="nav-link" href="{{ url_for('settings', chatbot_id=chatbot_id) }}">System Settings</a>
+                                    <a class="nav-link" href="{{ url_for('settings', chatbot_id=chatbot_id) }}">FAQs</a>
+                                </nav>
+                            </div>
+                            <a class="nav-link" href="{{ url_for('integrations', chatbot_id=chatbot_id) }}" id="Dashboard">
+                                <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                                Integrations
+                            </a>
+                            <div class="sb-sidenav-menu-heading">Analytics</div>
+                            <a class="nav-link" href="{{ url_for('analytics', chatbot_id=chatbot_id) }}">
+                                <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
+                                Questions
+                            </a>
+                            <a class="nav-link" href="">
+                                <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
+                                Conversations
+                            </a>
+                        </div>
+                    </div>
+                    <div class="sb-sidenav-footer">
+                        <div class="small">Logged in as:</div>
+                        Chage this to pass in name
+                    </div>
+                </nav>
+            </div>
+            <div id="layoutSidenav_content">
+                <main>
+                    <div class="container-fluid px-4">
+                        <h1 class="mt-4">Dashboard</h1>
+                        <ol class="breadcrumb mb-4">
+                            <li class="breadcrumb-item active">Dashboard</li>
+                        </ol>
+                        <div class="row">
+                            <div class="col-xl-3 col-md-6">
+                                <div class="card bg-primary text-white mb-4">
+                                    <div class="card-body">Primary Card</div>
+                                    <div class="card-footer d-flex align-items-center justify-content-between">
+                                        <a class="small text-white stretched-link" href="#">View Details</a>
+                                        <div class="small text-white"><i class="fas fa-angle-right"></i></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xl-3 col-md-6">
+                                <div class="card bg-warning text-white mb-4">
+                                    <div class="card-body">Warning Card</div>
+                                    <div class="card-footer d-flex align-items-center justify-content-between">
+                                        <a class="small text-white stretched-link" href="#">View Details</a>
+                                        <div class="small text-white"><i class="fas fa-angle-right"></i></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xl-3 col-md-6">
+                                <div class="card bg-success text-white mb-4">
+                                    <div class="card-body">Success Card</div>
+                                    <div class="card-footer d-flex align-items-center justify-content-between">
+                                        <a class="small text-white stretched-link" href="#">View Details</a>
+                                        <div class="small text-white"><i class="fas fa-angle-right"></i></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xl-3 col-md-6">
+                                <div class="card bg-danger text-white mb-4">
+                                    <div class="card-body">Danger Card</div>
+                                    <div class="card-footer d-flex align-items-center justify-content-between">
+                                        <a class="small text-white stretched-link" href="#">View Details</a>
+                                        <div class="small text-white"><i class="fas fa-angle-right"></i></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xl-6">
+                                <div class="card mb-4">
+                                    <div class="card-header">
+                                        <i class="fas fa-chart-area me-1"></i>
+                                        Monthly Chatbot Uses
+                                    </div>
+                                    <div class="card-body"><canvas id="myAreaChart" width="100%" height="40"></canvas></div>
+                                </div>
+                            </div>
+                            <div class="col-xl-6">
+                                <div class="card mb-4">
+                                    <div class="card-header">
+                                        <i class="fas fa-chart-bar me-1"></i>
+                                        Feedback From Users (like and dislike stuffffff)
+                                    </div>
+                                    <div class="card-body"><canvas id="myBarChart" width="100%" height="40"></canvas></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card mb-4">
+                            <div class="card-header">
+                                <i class="fas fa-table me-1"></i>
+                                DataTable Example
+                            </div>
+                            <div class="card-body">
+                                <table id="datatablesSimple">
+                                    <thead>
+                                        <tr>
+                                            <th>User Question</th>
+                                            <th>Bot Response</th>
+                                            <th>Feedback</th>
+                                            <th>Created At</th>=
+                                        </tr>
+                                    </thead>
+                                    <tfoot>
+                                        <tr>
+                                            <th>User Question</th>
+                                            <th>Bot Response</th>
+                                            <th>Feedback</th>
+                                            <th>Created At</th>
+                                        </tr>
+                                    </tfoot>
+                                    <tbody>
+                                        {% for item in data %}
+                                        <tr class="question-row {{ 'like' if item['feedback_type'] == 'Like' else ('dislike' if item['feedback_type'] == 'Dislike' else 'none') }}">
+                                            <td class="user-question">{{ item['user_question'] }}</td>
+                                            <td>{{ item['bot_response']|safe }}</td>
+                                            <td>{{ item['feedback_type'] }}</td>
+                                            <td>{{ item['created_at'] }}</td>
+                                        </tr>
+                                    {% endfor %}
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </main>
+                <footer class="py-4 bg-light mt-auto">
+                    <div class="container-fluid px-4">
+                        <div class="d-flex align-items-center justify-content-between small">
+                            <div class="text-muted">Copyright &copy; Your Website 2023</div>
+                            <div>
+                                <a href="#">Privacy Policy</a>
+                                &middot;
+                                <a href="#">Terms &amp; Conditions</a>
+                            </div>
+                        </div>
+                    </div>
+                </footer>
+            </div>
         </div>
-        <div class="chart-container">
-            <canvas id="myChart"></canvas>
-        </div>
-    </div>
-    <script src="{{ url_for('static', filename='js/analytics.js') }}"></script>
-</body>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+        <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
+        <script src="{{ url_for('static', filename='js/chart-area-demo.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/chart-bar-demo.js') }}"></script>
+        <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js" crossorigin="anonymous"></script>
+        <script src="{{ url_for('static', filename='js/datatables-simple-demo.js') }}"></script>
+    </body>
 </html>
