--- a/static/css/integrations.css
+++ b/static/css/integrations.css
@@ -1,172 +1,4 @@
-html, body {
-  margin: 0;
-  padding: 0;
-}
 
-.top-ribbon {
-  background-color: #111;
-  height: 101px;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  padding-right: 20px;
-  color: white;
-  font-size: 40px;
-}
-
-.company-name {
-  margin-right: 10px;
-  font-family: Arial, sans-serif; 
-  font-weight: bold;
-  font-style: italic;
-}
-
-.company-name img {
-  height: 101px; /* Adjust as needed */
-  width: auto;
-}
-
-.button-home {
-  background-color: #5C6BC0;
-  color: #ffffff;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 4px;
-  font-size: 16px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  margin-bottom: 0;
-  line-height: 1;
-  text-decoration: none; /* Removes underline */
-  font-style: normal; /* Removes italics */
-  display: inline-block; /* Aligns the button horizontally */
-  margin-right: 20px;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: bold;
-}
-
-.button-home:hover {
-  background-color: #3F51B5;
-  color: #ffffff;
-}
-
-.sidepanel {
-    height: 100%; /* Specify a height */
-    width: 0; /* 0 width - change this with JavaScript */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Stay on top */
-    top: 0;
-    left: 0;
-    background-color: #111; /* Black*/
-    overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 60px; /* Place content 60px from the top */
-    transition: 0.5s; /* 0.5 second transition effect to slide in the sidepanel */
-    font-family: Tahoma;
-  }
-  
-  /* The sidepanel links */
-.sidepanel a {
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 32px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
-  height: 46px;
-  padding-top: 30px;
-  border-bottom: 1px solid #818181;
-}
-
-  .mgn-top {
-    margin-top: 42px;
-  }
-  
-  /* When you mouse over the navigation links, change their color */
-  .sidepanel a:hover {
-    color: #f1f1f1;
-  }
-  
-  /* Position and style the close button (top right corner) */
-  .sidepanel .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px;
-  }
-  .closebtn {
-    border-bottom: none;
-    margin-top: 20px;
-    height: 65px;
-    width: 50px;
-  }
-  
-  /* Style the button that is used to open the sidepanel */
-  .openbtn {
-    font-size: 32px;
-    cursor: pointer;
-    background-color: #111;
-    color: rgb(255, 255, 255);
-    padding: 20px 26px;
-    border: none;
-    height: 50;
-    width: 50;
-  }
-  
-  .openbtn:hover {
-    background-color: #444;
-  }
-
-  .btns {
-    font-size: 50px;
-    cursor: pointer;
-    background-color: #111;
-    color: rgb(255, 255, 255);
-    padding: 15px 15px 10px 15px;
-    border: none;
-  }
-  
-  .btns:hover {
-    background-color: #444;
-  }
-
-
-    /* The sidepanel menu ***************************************************************************************************/
-  .sidenav {
-    height: 100%; /* Full-height: remove this if you want "auto" height */
-    width: 80px; /* Set the width of the sidebar */
-    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-    z-index: 1; /* Stay on top */
-    top: 0; /* Stay at the top */
-    left: 0;
-    background-color: #111; /* Black */
-    overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 20px;
-  }
-  
-  /* The navigation menu links */
-  .sidenav a {
-    padding: 6px 8px 6px 16px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
-  }
-  
-  /* When you mouse over the navigation links, change their color */
-  .sidenav a:hover {
-    color: #f1f1f1;
-  }  /* Style page content */
-  .main {
-    margin-left: 160px; /* Same as the width of the sidebar */
-    padding: 0px 10px;
-  }
-  
-  /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
-  @media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
-    .sidenav a {font-size: 18px;}
-  }
 
   .webpage {
     display: flex;
@@ -175,12 +7,11 @@ html, body {
     height: 73px; /* Adjust as needed */
     background-color: rgb(255, 255, 255);
     border-radius: 10px;
-    margin: 10px 0;
     padding: 10px;
   }
   .webpage a {
     text-decoration: none;
-    color: black;
+    color: black !important;
     font-size: 22px;
     margin-left: 15px;
   }
@@ -188,7 +19,6 @@ html, body {
 .code-container {
   position: relative;
   padding: 0 10px 10px 10px; /* Top padding set to 0 */
-  margin: 0 0 15px 100px; /* Top margin set to 0 */
   overflow-x: auto;
   overflow-y: auto; /* Add vertical scroll */
   max-height: 600px; /* Increase the height to 600px */
@@ -236,12 +66,10 @@ html, body {
 }
 
 .instructions {
-    font-family: Tahoma;
-    margin-left: 100px; /* left margin of 100px */
     margin-bottom: 5px;
+    margin-top: 20px;
 }
 body {
   background-color: #313131;
   color: rgb(237, 237, 237);
-  font-family: Tahoma;
 }
