--- a/templates/integrations.html
+++ b/templates/integrations.html
@@ -1,37 +1,13 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Inetgrations</title>
-    <meta charset="UTF-8">
+{% extends "base.html" %}
+
+{% block styles %}
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/integrations.css') }}">
     <link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/themes/prism.min.css" rel="stylesheet" />
-</head>
-<body>
-    <div class="top-ribbon">
-        <a href="{{ url_for('home') }}" class="button-home">HOME</a>
-        <span class="company-name">
-            <a href="https://www.eccoai.org/">
-                <img src="{{ url_for('static', filename='images/logoword2.png') }}" alt="Company Logo">
-            </a>
-        </span>
-    </div>
-    <div class="sidenav">
-        <button class="openbtn" onclick="openNav()">&#9776;</button>
-        <button class="btns" id="admin" title="Documents" onclick="openNav()"><img src="{{ url_for('static', filename='images/paper (1).png') }}" height="50" width="50" alt="Documents"></button>
-        <button class="btns" id="settings" title="Settings" onclick="openNav()"><img src="{{ url_for('static', filename='images/setting (1).png') }}" height="50" width="50" alt="settings"></button>
-        <button class="btns" id="integrations" title="Integrations" onclick="openNav()"><img src="{{ url_for('static', filename='images/integration (1).png') }}" height="50" width="50" alt="integration"></button>
-        <button class="btns" id="analytics" title="Analytics" onclick="openNav()"><img src="{{ url_for('static', filename='images/data-analytics (1).png') }}" height="50" width="50" alt="analytics"></button>
-    </div>
-    <section id="sidepanel">
-        <div id="mySidepanel" class="sidepanel">
-            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <a href="{{ url_for('admin', chatbot_id=chatbot_id) }}" id="admin" class="mgn-top">Documents</a>
-            <a href="{{ url_for('settings', chatbot_id=chatbot_id) }}" id="settings" class="mgn">Settings</a>
-            <a href="{{ url_for('integrations', chatbot_id=chatbot_id) }}" id="integrations" class="mgn">Integrations</a>
-            <a href="{{ url_for('analytics', chatbot_id=chatbot_id) }}" id="analytics" class="mgn">Analytics</a>
-        </div>
-    </section>
+{% endblock %}
+
+{% block content %}
+    <h1 class="mt-4">Integrations</h1>
     <h2 class="instructions">Web Page</h2>
     <div class="code-container">
         <div class="webpage">
@@ -40,6 +16,7 @@
         <a id="view-website-btn" href="https://app.eccoai.org/{{ user_id }}/{{ chatbot_id }}" target="_blank">
             <img src="{{ url_for('static', filename='images/globe.png') }}" class="copy-img" style="cursor: pointer;"> <!-- Replace the button with an image -->
         </a>
+        <p style="color: #d3cece; margin-top: 5px;">Place this code wherever you'd like the iframe to appear on your website.</p>
     </div>
     <h2 class="instructions">Popup Chat</h2>
     <div class="code-container">
@@ -59,8 +36,9 @@
         </div>
         <p style="color: #d3cece; margin-top: 5px;">Place this code wherever you'd like the iframe to appear on your website.</p>
     </div>
+{% endblock %}
+{% block scripts %}
     <script src="{{ url_for('static', filename='js/integrations.js') }}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/prism.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/components/prism-javascript.min.js"></script>
-</body>
-</html>
+{% endblock %}
