--- a/templates/base.html
+++ b/templates/base.html
@@ -74,7 +74,7 @@
                                 <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
                                 Questions
                             </a>
-                            <a class="nav-link" href="">
+                            <a class="nav-link" href="{{ url_for('get_conversations', chatbot_id=chatbot_id) }}">
                                 <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                                 Conversations
                             </a>
