--- a/templates/admin.html
+++ b/templates/admin.html
@@ -9,6 +9,9 @@
 {% endblock %}
 
 {% block content %}
+    <div class="right-container">
+        <!-- Content for the right section goes here -->
+    </div>
     <div class="main-container">
         <div class="left-container">
             <section class="upload-section" id="document-upload">
@@ -72,7 +75,7 @@
                     </form>
                 </section>
 
-                <section >
+                <div class="section">
                     <div class="file-list">
                         <h2>Existing Documents</h2>
                         <table>
@@ -125,7 +128,7 @@
                             </tbody>
                         </table>
                     </div>
-                </section>
+                </div>
             </section>
         </div>
     </div>
